--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1691,8 +1691,8 @@ wizard.control.back.description=Go to previous wizard step
 wizard.control.back=Back
 wizard.control.cancel.description=Cancel this wizard
 wizard.control.cancel=Cancel
-wizard.control.finish.description=Exit this wizard task
-wizard.control.finish=Exit
+wizard.control.finish.description=Finishes this wizard task
+wizard.control.finish=Finish
 wizard.control.help.description=Show online help (Alt-8)
 wizard.control.no_folder.title=Folder not found
 wizard.control.no_folder.description=This folder could not be found.
