Compact mode button, refs #2506

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1514,10 +1514,7 @@ status.port.tip=Connection port number
 status.port.text=Port: {0}
 status.chat_pending=There are chat messages waiting
 
-tray_icon_manager.status_change.connected={APPNAME} is connected
-tray_icon_manager.status_change.disabled={APPNAME} is disabled
-tray_icon_manager.status_change.connecting={APPNAME} is connecting
-tray_icon_manager.status_change.title=Connection Status
+status_bar.compact.tips=Switch to compact mode
 status_bar.sleep.tips=Disable folder change scanning
 status_bar.no_sleep.tips=Enable folder change scanning
 status_bar.poor_quality_warning.title=Poor connection quality
@@ -1594,6 +1591,11 @@ transfers.started=Started
 transfers.swarm=Multi: {0} sources
 transfers.to=To
 transfers.verifying=Checking
+
+tray_icon_manager.status_change.connected={APPNAME} is connected
+tray_icon_manager.status_change.disabled={APPNAME} is disabled
+tray_icon_manager.status_change.connecting={APPNAME} is connecting
+tray_icon_manager.status_change.title=Connection Status
 
 local_delete_notice.title=All files deleted
 local_delete_notice.message=All files in folder {0} have been deleted.\n\nDeletions have not been distributed to other members.
