--- a/src/skins/de/dal33t/powerfolder/skin/greendream/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/greendream/icons.properties
@@ -61,6 +61,7 @@ advanced.icon=de/dal33t/powerfolder/skin/greendream/icons/Advanced.png
 arrow_left.icon=de/dal33t/powerfolder/skin/greendream/icons/ArrowLeft.png
 arrow_right.icon=de/dal33t/powerfolder/skin/greendream/icons/ArrowRight.png
 expand.icon=de/dal33t/powerfolder/skin/greendream/icons/Expand.png
+compact.icon=de/dal33t/powerfolder/skin/greendream/icons/Compact.png
 collapse.icon=de/dal33t/powerfolder/skin/greendream/icons/Collapse.png
 black_list.icon=de/dal33t/powerfolder/skin/greendream/icons/Add.png
 blank.icon=de/dal33t/powerfolder/skin/greendream/icons/Blank.png
@@ -151,6 +152,7 @@ sync10.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync10.png
 sync11.icon=de/dal33t/powerfolder/skin/greendream/icons/Sync11.png
 system_monitor.icon=de/dal33t/powerfolder/skin/greendream/icons/SystemMonitor.png
 systray_default.icon=de/dal33t/powerfolder/skin/greendream/icons/Icon32x32.png
+uncompact.icon=de/dal33t/powerfolder/skin/greendream/icons/Uncompact.png
 unknown.icon=de/dal33t/powerfolder/skin/greendream/icons/Unknown.png
 upload.icon=de/dal33t/powerfolder/skin/greendream/icons/Upload.png
 upload_picto.icon=de/dal33t/powerfolder/skin/greendream/icons/pictos/Upload.png
