--- a/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
@@ -93,6 +93,7 @@ bug.icon=de/dal33t/powerfolder/skin/lightsky/icons/Bug.png
 chat.icon=de/dal33t/powerfolder/skin/lightsky/icons/Chat.png
 chat_pending.icon=de/dal33t/powerfolder/skin/lightsky/icons/ChatPending.png
 checked.icon=de/dal33t/powerfolder/skin/lightsky/icons/Checked.png
+compact.icon=de/dal33t/powerfolder/skin/lightsky/icons/Compact.png
 computer.icon=de/dal33t/powerfolder/skin/lightsky/icons/Computer.png
 connected_not.icon=de/dal33t/powerfolder/skin/lightsky/icons/ConnectNot.png
 connection_good.icon=de/dal33t/powerfolder/skin/lightsky/icons/ConnectionGood.png
@@ -174,6 +175,7 @@ sync10.icon=de/dal33t/powerfolder/skin/lightsky/icons/Sync10.png
 sync11.icon=de/dal33t/powerfolder/skin/lightsky/icons/Sync11.png
 system_monitor.icon=de/dal33t/powerfolder/skin/lightsky/icons/SystemMonitor.png
 systray_default.icon=de/dal33t/powerfolder/skin/lightsky/icons/Icon32x32.png
+uncompact.icon=de/dal33t/powerfolder/skin/lightsky/icons/Uncompact.png
 unknown.icon=de/dal33t/powerfolder/skin/lightsky/icons/Unknown.png
 upload.icon=de/dal33t/powerfolder/skin/lightsky/icons/Upload.png
 upload_picto.icon=de/dal33t/powerfolder/skin/lightsky/icons/pictos/Upload.png
