--- a/src/skins/de/dal33t/powerfolder/skin/mauvemetal/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/mauvemetal/icons.properties
@@ -68,6 +68,7 @@ bug.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Bug.png
 chat.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Chat.png
 chat_pending.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/ChatPending.png
 checked.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Checked.png
+compact.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Compact.png
 computer.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Computer.png
 connected_not.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/ConnectNot.png
 connection_good.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/ConnectionGood.png
@@ -151,6 +152,7 @@ sleep.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Sleep.png
 #sync11.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Sync11.png
 system_monitor.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/SystemMonitor.png
 systray_default.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Icon32x32.png
+uncompact.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Uncompact.png
 unknown.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Unknown.png
 upload.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Upload.png
 upload_picto.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/pictos/Upload.png
