--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1156,7 +1156,7 @@ low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can a
 low_memory.title=Low memory
 
 main_frame.inline_info_close.tip=Close information panel
-
+main_frame.uncompact.tips=Return to full mode
 main_tabbed_pane.computers.description=Details about other computers
 main_tabbed_pane.computers.key=C
 main_tabbed_pane.computers.name=Computers
