Made configurationEntry for enabling/disabling network broadcasts

--- a/src/test-resources/ControllerLisa.config
+++ b/src/test-resources/ControllerLisa.config
@@ -13,7 +13,7 @@ net.rcon.port=1155
 random-port=false
 verbose=true
 log.file.level=OFF
-disablebroadcasts=true
+net.broadcast=false
 disablercon=true
 networkingmode=LANONLYMODE
 auto.connect=false
