--- a/src/test-resources/ControllerMaggie.config
+++ b/src/test-resources/ControllerMaggie.config
@@ -12,7 +12,7 @@ verbose=true
 log.file.level=OFF
 disableui=true
 uploadlimit=0
-disablebroadcasts=true
+net.broadcast=false
 disablercon=true
 networkingmode=LANONLYMODE
 auto.connect=false
