--- a/src/test-resources/ControllerMarge.config
+++ b/src/test-resources/ControllerMarge.config
@@ -13,7 +13,7 @@ log.file.level=OFF
 disableui=true
 uploadlimit=0
 disablercon=true
-disablebroadcasts=true
+net.broadcast=false
 networkingmode=LANONLYMODE
 mydyndns=localhost
 auto.connect=false
