--- a/src/test-resources/ControllerBart.config
+++ b/src/test-resources/ControllerBart.config
@@ -14,7 +14,7 @@ disableui=true
 uploadlimit=0
 net.rcon=true
 net.rcon.port=3458
-disablebroadcasts=true
+net.broadcast=false
 networkingmode=LANONLYMODE
 mydyndns=localhost
 auto.connect=false
