--- a/src/test-resources/ControllerBartUI.config
+++ b/src/test-resources/ControllerBartUI.config
@@ -11,7 +11,7 @@ verbose=true
 log.file.level=OFF
 disableui=false
 uploadlimit=0
-disablebroadcasts=true
+net.broadcast=false
 networkingmode=LANONLYMODE
 mydyndns=localhost
 uploads.auto.cleanup.frequency=4
