Log button, refs #2506

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1162,6 +1162,11 @@ main_frame.resume.text=Resume
 main_frame.pause.tips=Pause
 main_frame.resume.tips=Resume
 
+main_frame.log_in.text=Log in
+main_frame.log_out.text=Log out
+main_frame.log_in.tip=Log in
+main_frame.log_out.tip=Log out
+
 main_frame.uncompact.text=Full mode
 main_frame.uncompact.tips=Return to full mode
 
