web intrface btn, refs #2506

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1167,6 +1167,9 @@ main_frame.log_out.text=Log out
 main_frame.log_in.tip=Log in
 main_frame.log_out.tip=Log out
 
+main_frame.open_web_interface.text=Open Web-Interface
+main_frame.open_web_interface.tip=Open Web-Interface
+
 main_frame.uncompact.text=Full mode
 main_frame.uncompact.tips=Return to full mode
 
