--- a/build.xml
+++ b/build.xml
@@ -350,7 +350,7 @@ For creation of the installer:
 		<mkdir dir="${build.reports.dir}/html" />
 		<mkdir dir="${build.reports.dir}/htmlnoframes" />
 		<!-- Batchrun all tests -->
-		<junit printsummary="yes" haltonfailure="false" fork="yes" maxmemory="1024m">
+		<junit printsummary="yes" haltonfailure="false" fork="yes" maxmemory="4g">
 			<classpath>
 				<pathelement location="${build.dir}" />
 				<pathelement location="${junit.lib}" />
