--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -944,7 +944,8 @@ folder_remove.dialog.delete=Delete archive and meta-data
 folder_remove.dialog.remove_from_local=Stop to sync local
 folder_remove.dialog.remove_from_os=Remove online
 folder_remove.dialog.sync_warning=The Folder is currently syncing\!
-folder_remove.dialog.text=Remove Folder {0}?
+folder_remove.dialog.text=Remove folder {0}?
+folder_remove.dialog.online_text=Remove online folder {0}?
 folder_remove.dialog.title=Remove Folder {0}?
 
 folder_repository.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
