--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -944,7 +944,7 @@ folder_remove.dialog.remove_from_os=Remove online
 folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 folder_remove.dialog.text=Remove folder {0}?
 folder_remove.dialog.online_text=Remove online folder {0}?
-folder_remove.dialog.title=Remove Folder {0}?
+folder_remove.dialog.title=Remove Folder
 
 folder_repository.warn_on_close.text=These folders are not in sync yet\:\n\n\n\n{0}
 folder_repository.warn_on_close_eta.text=These folders are not in sync yet\:\n\n\n\n{0}\n\nETA: {1}
@@ -1415,7 +1415,7 @@ preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Warning
 
 preview_folder_remove.dialog.text=Remove folder {0}?
-preview_folder_remove.dialog.title=Remove Folder {0}?
+preview_folder_remove.dialog.title=Remove Folder
 
 remove_pattern.dont=Do Not Remove
 remove_pattern.prompt=Pattern '{0}' will be removed.
