Remove display chat message property, fixes #25357

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -581,8 +581,6 @@ archive_mode_selector_panel.purge.tip=Purge entire archive
 chat_frame.title=Chat
 chat_frame.tool_tip=Chat with {0}
 
-chat.notification.message=You have received a chat message.
-chat.notification.title=Chat Message Received
 chat.notification.title_long=Chat message from {0}
 
 chat_notification_handler.reply=Reply
@@ -1216,7 +1214,6 @@ folder_auto_create_notice.text=A new folder has been found: {0}
 
 notification_form.title=<html><b>{APPNAME}</b><br>{0}</html>
 notification_form.never_show_chat_notifications=Never show chat notifications
-notification_form.display_chat_messages=Display chat messages
 notification_form.never_show_system_notifications=Never show system notifications
 
 notification_handler.display.text=Display
@@ -1366,7 +1363,6 @@ preferences.dialog.server_disconnect.nosync=Enforce permission checks. Don't syn
 preferences.dialog.show_advanced=Show advanced preferences
 preferences.dialog.backup_only_clinet=Backup-only client
 preferences.dialog.show_chat_notifications=Show chat notifications when minimized
-preferences.dialog.show_chat_messages=Display chat messages in notification area
 preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.show_auto_created_folders=Show notification of autocreated folders
 preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
@@ -1420,7 +1416,7 @@ preview_folder_remove.dialog.title=Remove Folder
 remove_pattern.dont=Do Not Remove
 remove_pattern.prompt=Pattern '{0}' will be removed.
 remove_pattern.remove=Remove
-remove_pattern.title=Remove ignore pattern
+remove_pattern.title=Remove ignore paDisttern
 
 restore_files_table_model.file_name=File name
 restore_files_table_model.version=Version
@@ -1561,7 +1557,6 @@ systray.sync_shutdown=Sync and Shutdown
 systray.sync_exit=Sync and Exit
 systray.notifications=Notifications
 systray.notifications.chat=Show Chat Notifications
-systray.notifications.chat.messages=Display Chat Messages
 systray.notifications.system=Show System Notifications
 systray.tooltip.down.mb=Down {0} MBs
 systray.tooltip.down=Down {0} KBs
