Sync stuff, refs #2506

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1170,6 +1170,15 @@ main_frame.open_web_interface.tip=Open Web-Interface
 main_frame.uncompact.text=Full mode
 main_frame.uncompact.tips=Return to full mode
 
+main_frame.status.unsure=Checking sync status...
+main_frame.status.not_running=Not running
+main_frame.status.no_folders=No folders configured
+main_frame.status.never_synced=Folders never in sync
+main_frame.status.synchronizing.0=Sync in progress.
+main_frame.status.synchronizing.1=Sync in progress..
+main_frame.status.synchronizing.2=Sync in progress...
+main_frame.status.in_sync=All folders are in sync
+
 main_tabbed_pane.computers.description=Details about other computers
 main_tabbed_pane.computers.key=C
 main_tabbed_pane.computers.name=Computers
