Fix icon names, refs #2506

--- a/src/skins/de/dal33t/powerfolder/skin/blueglobe/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/blueglobe/icons.properties
@@ -91,6 +91,7 @@ chat.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Chat.png
 chat_pending.icon=de/dal33t/powerfolder/skin/blueglobe/icons/ChatPending.png
 checked.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Checked.png
 computer.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Computer.png
+compact.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Compact.png
 connected_not.icon=de/dal33t/powerfolder/skin/blueglobe/icons/ConnectNot.png
 connection_good.icon=de/dal33t/powerfolder/skin/blueglobe/icons/ConnectionGood.png
 connection_medium.icon=de/dal33t/powerfolder/skin/blueglobe/icons/ConnectionMedium.png
