--- a/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
@@ -169,7 +169,7 @@ sync10.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Sync10.png
 sync11.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Sync11.png
 system_monitor.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/SystemMonitor.png
 systray_default.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Icon32x32.png
-uncomapct.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Uncompact.png
+uncompact.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Uncompact.png
 unknown.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Unknown.png
 upload.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Upload.png
 wake_up.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/WakeUp.png
