Begin new compact mode look, with d&d, refs #2506

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1154,9 +1154,12 @@ low_memory.title=Low memory
 
 main_frame.inline_info_close.tip=Close information panel
 
+main_frame.close.tips=Close
+
 main_frame.pause.text=Pause
 main_frame.resume.text=Resume
 main_frame.pause.tips=Pause
+
 main_frame.resume.tips=Resume
 
 main_frame.log_in.text=Log in
