--- a/src/skins/de/dal33t/powerfolder/skin/blueglobe/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/blueglobe/icons.properties
@@ -96,6 +96,7 @@ connected_not.icon=de/dal33t/powerfolder/skin/blueglobe/icons/ConnectNot.png
 connection_good.icon=de/dal33t/powerfolder/skin/blueglobe/icons/ConnectionGood.png
 connection_medium.icon=de/dal33t/powerfolder/skin/blueglobe/icons/ConnectionMedium.png
 connection_poor.icon=de/dal33t/powerfolder/skin/blueglobe/icons/ConnectionPoor.png
+close.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Close.png
 delete.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Delete.png
 dialog.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Dialog.png
 directory.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Directory.png
