--- a/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
@@ -99,6 +99,7 @@ connected_not.icon=de/dal33t/powerfolder/skin/lightsky/icons/ConnectNot.png
 connection_good.icon=de/dal33t/powerfolder/skin/lightsky/icons/ConnectionGood.png
 connection_medium.icon=de/dal33t/powerfolder/skin/lightsky/icons/ConnectionMedium.png
 connection_poor.icon=de/dal33t/powerfolder/skin/lightsky/icons/ConnectionPoor.png
+close.icon=de/dal33t/powerfolder/skin/lightsky/icons/Close.png
 delete.icon=de/dal33t/powerfolder/skin/lightsky/icons/Delete.png
 dialog.icon=de/dal33t/powerfolder/skin/lightsky/icons/Dialog.png
 directory.icon=de/dal33t/powerfolder/skin/lightsky/icons/Directory.png
