Basic compact layout, refs #2506

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1152,28 +1152,12 @@ low_memory.increase=Increase Memory
 low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.\n\nMore information:\n{0}
 low_memory.title=Low memory
 
-main_frame.inline_info_close.tip=Close information panel
-
 main_frame.close.tips=Close
-
+main_frame.inline_info_close.tip=Close information panel
 main_frame.pause.text=Pause
 main_frame.resume.text=Resume
-main_frame.pause.tips=Pause
+main_frame.open_web_interface.text=Web
 
-main_frame.resume.tips=Resume
-
-main_frame.log_in.text=Log in
-main_frame.log_out.text=Log out
-main_frame.log_in.tip=Log in
-main_frame.log_out.tip=Log out
-
-main_frame.open_web_interface.text=Open Web-Interface
-main_frame.open_web_interface.tip=Open Web-Interface
-
-main_frame.uncompact.text=Full mode
-main_frame.uncompact.tips=Return to full mode
-
-main_frame.status.unsure=Checking sync status...
 main_frame.status.not_running=Not running
 main_frame.status.no_folders=No folders configured
 main_frame.status.never_synced=Folders never in sync
