--- a/src/skins/de/dal33t/powerfolder/skin/mauvemetal/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/mauvemetal/icons.properties
@@ -142,6 +142,7 @@ sleep.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Sleep.png
 #sync09.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Sync09.png
 #sync10.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Sync10.png
 #sync11.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Sync11.png
+sync_complete.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/SyncComplete.png
 system_monitor.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/SystemMonitor.png
 systray_default.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Icon32x32.png
 uncompact.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Uncompact.png
