--- a/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
@@ -168,6 +168,7 @@ sync08.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Sync08.png
 sync09.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Sync09.png
 sync10.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Sync10.png
 sync11.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Sync11.png
+sync_complete.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/SyncComplete.png
 system_monitor.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/SystemMonitor.png
 systray_default.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Icon32x32.png
 uncompact.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Uncompact.png
