--- a/src/skins/de/dal33t/powerfolder/skin/powerfolder2/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/powerfolder2/icons.properties
@@ -161,6 +161,7 @@ sync08.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Sync08.png
 sync09.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Sync09.png
 sync10.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Sync10.png
 sync11.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Sync11.png
+sync_complete.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/SyncComplete.png
 system_monitor.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/SystemMonitor.png
 systray_default.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Icon32x32.png
 unknown.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Unknown.png
