Web open, refs #2506

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -363,6 +363,10 @@ action_webview.description=Opens the web browser to view the files of the folder
 action_webview.key=B
 action_webview.name=Open in web
 
+action_open_web_interface.description=Opens the web interface
+action_open_web_interface.key=O
+action_open_web_interface.name=Open web interface
+
 ##################
 # Transfer Modes #
 ##################
@@ -1156,7 +1160,6 @@ main_frame.close.tips=Close
 main_frame.inline_info_close.tip=Close information panel
 main_frame.pause.text=Pause
 main_frame.resume.text=Resume
-main_frame.open_web_interface.text=Web
 
 main_frame.status.not_running=Not running
 main_frame.status.no_folders=No folders configured
