Pause/Resume, refs #2506

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -27,13 +27,13 @@ action_abort_download.description=Abort selected download
 action_abort_download.key=A
 action_abort_download.name=Abort
 
+action_activate_notice.description=Activate the selected notice
+action_activate_notice.key=A
+action_activate_notice.name=Activate
+
 action_add_directory.description=Add directory
 action_add_directory.key=A
 action_add_directory.name=Add
-
-action_directory_new.description=Create a new directory
-action_directory_new.key=N
-action_directory_new.name=New Directory
 
 action_add_friend.description=Add computer to connection list
 action_add_friend.key=A
@@ -47,33 +47,21 @@ action_add_invitee.description=Add invitee
 action_add_invitee.key=A
 action_add_invitee.name=Add
 
-action_activate_notice.description=Activate the selected notice
-action_activate_notice.key=A
-action_activate_notice.name=Activate
+action_backup_online_storage.description=Backup this folder to cloud space
+action_backup_online_storage.key=B
+action_backup_online_storage.name=Start online backup
 
 action_bold.description=Bold text
 action_bold.key=B
 action_bold.name=Bold
 
-action_move_local_folder.description=Move folder location
-action_move_local_folder.key=M
-action_move_local_folder.name=Move
-
-action_italic.description=Italic text
-action_italic.key=I
-action_italic.name=Italic
-
-action_underline.description=Underline text
-action_underline.key=U
-action_underline.name=Underline
+action_cleanup_archive.description=Delete any old archive files now
+action_cleanup_archive.key=C
+action_cleanup_archive.name=Cleanup
 
 action_cleanup_notices.description=Clear the list of notices
 action_cleanup_notices.key=C
 action_cleanup_notices.name=Cleanup
-
-action_cleanup_archive.description=Delete any old archive files now
-action_cleanup_archive.key=C
-action_cleanup_archive.name=Cleanup
 
 action_clear_completed_downloads.description=Clear the list of the recently completed downloads
 action_clear_completed_downloads.key=C
@@ -87,6 +75,14 @@ action_clear_link_directory.description=Clear the existing directory link
 action_clear_link_directory.key=C
 action_clear_link_directory.name=Clear
 
+action_clear_problem.description=Clear problems from list
+action_clear_problem.key=C
+action_clear_problem.name=Cleanup
+
+action_configure_transfer_mode.description=Configure this transfer mode
+action_configure_transfer_mode.key=C
+action_configure_transfer_mode.name=Configure
+
 action_connect.description=Manually connect to a computer
 action_connect.key=C
 action_connect.name=Connect
@@ -95,61 +91,33 @@ action_copy.description=Copy text
 action_copy.key=C
 action_copy.name=Copy
 
-action_delete_transfer_mode.description=Delete this transfer mode
-action_delete_transfer_mode.key=D
-action_delete_transfer_mode.name=Delete
-
-action_folder_wizard.description=Open the Folder Wizard
-action_folder_wizard.key=W
-action_folder_wizard.name=Wizard
-
-action_backup_online_storage.description=Backup this folder to cloud space
-action_backup_online_storage.key=B
-action_backup_online_storage.name=Start online backup
-
-action_maintain_folder_db.name=Maintain database
-action_maintain_folder_db.key=M
-action_maintain_folder_db.description=Maintains the internal folder database and frees up memory.
-
-action_stop_online_storage.description=Stop backing up this folder to cloud space
-action_stop_online_storage.key=S
-action_stop_online_storage.name=Stop online backup
-
 action_delete_file.description=Delete file
 action_delete_file.key=D
 action_delete_file.name=Delete
 
-action_remove_folder.description=Remove this folder
-action_remove_folder.key=R
-action_remove_folder.name=Remove
-
-action.reset_filters.description=Reset file filters to default values
-action.reset_filters.key=R
-action.reset_filters.name=Reset filters
+action_delete_transfer_mode.description=Delete this transfer mode
+action_delete_transfer_mode.key=D
+action_delete_transfer_mode.name=Delete
 
 action_details.description=Display the details panel
 action_details.key=D
 action_details.name=Details
 
+action_directory_new.description=Create a new directory
+action_directory_new.key=N
+action_directory_new.name=New Directory
+
 action_download_file.description=Download file
 action_download_file.key=D
 action_download_file.name=Download
-
-action_edit_ignore.description=Edit a pattern in the ignore list
-action_edit_ignore.key=E
-action_edit_ignore.name=Edit
 
 action_edit_archive.description=Edit archive mode details
 action_edit_archive.key=E
 action_edit_archive.name=Edit Archive
 
-action_configure_transfer_mode.description=Configure this transfer mode
-action_configure_transfer_mode.key=C
-action_configure_transfer_mode.name=Configure
-
-action_clear_problem.description=Clear problems from list
-action_clear_problem.key=C
-action_clear_problem.name=Cleanup
+action_edit_ignore.description=Edit a pattern in the ignore list
+action_edit_ignore.key=E
+action_edit_ignore.name=Edit
 
 action_find_computers.description=Search for other computers
 action_find_computers.key=F
@@ -158,6 +126,10 @@ action_find_computers.name=Find Computers
 action_folder_problem.description=Display any folder problems
 action_folder_problem.key=P
 action_folder_problem.name=Folder Problems
+
+action_folder_wizard.description=Open the Folder Wizard
+action_folder_wizard.key=W
+action_folder_wizard.name=Wizard
 
 action_help.description=Online help
 action_help.key=H
@@ -175,33 +147,41 @@ action_invite_friend.description=Invite someone to join this folder
 action_invite_friend.key=I
 action_invite_friend.name=Invite
 
-action_link_directory.description=Link directory to an existing folder
-action_link_directory.key=L
-action_link_directory.name=Link
-
-action_new_folder.description=Create a new folder
-action_new_folder.key=N
-action_new_folder.name=New Folder
+action_italic.description=Italic text
+action_italic.key=I
+action_italic.name=Italic
 
 action_join_online_storage.description=Locally join this folder
 action_join_online_storage.key=J
 action_join_online_storage.name=Join
 
-action_online_storage.description=Open this cloud space folder in browser
-action_online_storage.key=O
-action_online_storage.name=Cloud Space
+action_link_directory.description=Link directory to an existing folder
+action_link_directory.key=L
+action_link_directory.name=Link
 
-action_open_explorer.description=Explore this folder
-action_open_explorer.key=O
-action_open_explorer.name=Open
+action_maintain_folder_db.description=Maintains the internal folder database and frees up memory.
+action_maintain_folder_db.key=M
+action_maintain_folder_db.name=Maintain database
 
-action_open_problem.description=Open details of this problem in your browser
-action_open_problem.key=O
-action_open_problem.name=Open
+action_members_refresh.description=Refresh member list and permissions
+action_members_refresh.key=R
+action_members_refresh.name=Refresh
 
 action_most_recent_changes.description=Show most recent changes
 action_most_recent_changes.key=R
 action_most_recent_changes.name=Recent Changes
+
+action_move_local_folder.description=Move folder location
+action_move_local_folder.key=M
+action_move_local_folder.name=Move
+
+action_new_folder.description=Create a new folder
+action_new_folder.key=N
+action_new_folder.name=New Folder
+
+action_online_storage.description=Open this cloud space folder in browser
+action_online_storage.key=O
+action_online_storage.name=Cloud Space
 
 action_open_about_box.description=Show information about {APPNAME}
 action_open_about_box.key=A
@@ -219,6 +199,10 @@ action_open_downloads_information.description=Show details of recent file downlo
 action_open_downloads_information.key=D
 action_open_downloads_information.name=Downloads
 
+action_open_explorer.description=Explore this folder
+action_open_explorer.key=O
+action_open_explorer.name=Open
+
 action_open_file.description=Open file
 action_open_file.key=O
 action_open_file.name=Open
@@ -235,49 +219,61 @@ action_open_preferences.description=Open the preferences dialog
 action_open_preferences.key=P
 action_open_preferences.name=Preferences
 
-action_open_stats_charts.description=Open the statistics charts
-action_open_stats_charts.key=S
-action_open_stats_charts.name=Stats
+action_open_problem.description=Open details of this problem in your browser
+action_open_problem.key=O
+action_open_problem.name=Open
 
 action_open_settings_information.description=Open information on settings for this folder
 action_open_settings_information.key=S
 action_open_settings_information.name=Settings
 
+action_open_stats_charts.description=Open the statistics charts
+action_open_stats_charts.key=S
+action_open_stats_charts.name=Stats
+
 action_open_uploads_information.description=Show details of recent file uploads
 action_open_uploads_information.key=U
 action_open_uploads_information.name=Uploads
+
+action_open_web_interface.description=Opens the web interface
+action_open_web_interface.key=O
+action_open_web_interface.name=Web
 
 action_paste.description=Paste text
 action_paste.key=P
 action_paste.name=Paste
 
-action_proxy.description=Configure HTTP proxy settings
-action_proxy.key=P
-action_proxy.name=Proxy settings
+action_pause_sync.description=Disable folder change scanning
+action_pause_sync.key=P
+action_pause_sync.name=Pause
 
 action_preview.description=Preview notification settings
 action_preview.key=P
 action_preview.name=Preview
 
-action_reconnect.description=Reconnect to this computer now
-action_reconnect.key=C
-action_reconnect.name=Reconnect
+action_preview_folder.description=Convert this folder to a preview
+action_preview_folder.key=P
+action_preview_folder.name=Preview
+
+action_proxy.description=Configure HTTP proxy settings
+action_proxy.key=P
+action_proxy.name=Proxy settings
 
 action_recalculate.description=Recalculate automatic rates now
 action_recalculate.key=R
 action_recalculate.name=Recalculate
 
-action_members_refresh.description=Refresh member list and permissions
-action_members_refresh.key=R
-action_members_refresh.name=Refresh
-
-action_remove_invitee.description=Remove invitee
-action_remove_invitee.key=R
-action_remove_invitee.name=Remove
+action_reconnect.description=Reconnect to this computer now
+action_reconnect.key=C
+action_reconnect.name=Reconnect
 
 action_remove_directory.description=Remove directory
 action_remove_directory.key=R
 action_remove_directory.name=Remove
+
+action_remove_folder.description=Remove this folder
+action_remove_folder.key=R
+action_remove_folder.name=Remove
 
 action_remove_friend.description=Remove computer from connections list
 action_remove_friend.key=R
@@ -287,13 +283,29 @@ action_remove_ignore.description=Include files in sync
 action_remove_ignore.key=I
 action_remove_ignore.name=Include
 
-action_restore_file.description=Undelete file
-action_restore_file.key=R
-action_restore_file.name=Restore
+action_remove_invitee.description=Remove invitee
+action_remove_invitee.key=R
+action_remove_invitee.name=Remove
+
+action_reset_filters.description=Reset file filters to default values
+action_reset_filters.key=R
+action_reset_filters.name=Reset filters
+
+action_resolve_problem.description=Resolve problems
+action_resolve_problem.key=R
+action_resolve_problem.name=Resolve
 
 action_restore_archive.description=Restore archived file version
 action_restore_archive.key=R
 action_restore_archive.name=Restore
+
+action_restore_file.description=Undelete file
+action_restore_file.key=R
+action_restore_file.name=Restore
+
+action_resume_sync.description=Enable folder change scanning
+action_resume_sync.key=R
+action_resume_sync.name=Resume
 
 action_search_computer.description=Search for a computer
 action_search_computer.key=S
@@ -303,22 +315,6 @@ action_search_invitee.description=Search for invitees
 action_search_invitee.key=S
 action_search_invitee.name=Search
 
-action_single_file_transfer_offer.description=Offer a single file transfer
-action_single_file_transfer_offer.key=O
-action_single_file_transfer_offer.name=Offer
-
-action_single_file_transfer_accept.description=Accept a single file transfer
-action_single_file_transfer_accept.key=A
-action_single_file_transfer_accept.name=Accept
-
-action_resolve_problem.description=Resolve problems
-action_resolve_problem.key=R
-action_resolve_problem.name=Resolve
-
-action_preview_folder.description=Convert this folder to a preview
-action_preview_folder.key=P
-action_preview_folder.name=Preview
-
 action_select_all.description=Select all text
 action_select_all.key=S
 action_select_all.name=Select All
@@ -326,6 +322,18 @@ action_select_all.name=Select All
 action_single_file_transfer.description=Transfer file to other computer
 action_single_file_transfer.key=T
 action_single_file_transfer.name=Transfer
+
+action_single_file_transfer_accept.description=Accept a single file transfer
+action_single_file_transfer_accept.key=A
+action_single_file_transfer_accept.name=Accept
+
+action_single_file_transfer_offer.description=Offer a single file transfer
+action_single_file_transfer_offer.key=O
+action_single_file_transfer_offer.name=Offer
+
+action_stop_online_storage.description=Stop backing up this folder to cloud space
+action_stop_online_storage.key=S
+action_stop_online_storage.name=Stop online backup
 
 action_stop_preview_folder.description=Join this preview folder
 action_stop_preview_folder.key=J
@@ -339,21 +347,21 @@ action_sync_folder.description=Sync this folder now
 action_sync_folder.key=S
 action_sync_folder.name=Sync
 
-action_unmark.description=Unmark as new file (clear from downloads)
-action_unmark.key=U
-action_unmark.name=Unmark
-
-action_pause_sync.description=Pause all sync tasks
-action_pause_sync.key=P
-action_pause_sync.name=Pause
-
-action_view_notices.description=View any notices
-action_view_notices.key=N
-action_view_notices.name=Notices
+action_underline.description=Underline text
+action_underline.key=U
+action_underline.name=Underline
 
 action_undo_auto_create.description=Undo autocreate
 action_undo_auto_create.key=U
 action_undo_auto_create.name=Undo
+
+action_unmark.description=Unmark as new file (clear from downloads)
+action_unmark.key=U
+action_unmark.name=Unmark
+
+action_view_notices.description=View any notices
+action_view_notices.key=N
+action_view_notices.name=Notices
 
 action_webdav.description=Mount this folder as networked drive via WebDAV
 action_webdav.key=M
@@ -362,10 +370,6 @@ action_webdav.name=Mount as drive
 action_webview.description=Opens the web browser to view the files of the folder
 action_webview.key=B
 action_webview.name=Open in web
-
-action_open_web_interface.description=Opens the web interface
-action_open_web_interface.key=O
-action_open_web_interface.name=Open web interface
 
 ##################
 # Transfer Modes #
@@ -1158,8 +1162,6 @@ low_memory.title=Low memory
 
 main_frame.close.tips=Close
 main_frame.inline_info_close.tip=Close information panel
-main_frame.pause.text=Pause
-main_frame.resume.text=Resume
 
 main_frame.status.not_running=Not running
 main_frame.status.no_folders=No folders configured
