--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1171,6 +1171,8 @@ main_frame.status.synchronizing.1=Sync in progress..
 main_frame.status.synchronizing.2=Sync in progress...
 main_frame.status.in_sync=All folders are in sync
 
+mainframe.uncompact.tips=Switch to uncompact mode
+
 main_tabbed_pane.computers.description=Details about other computers
 main_tabbed_pane.computers.key=C
 main_tabbed_pane.computers.name=Computers
