--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1163,15 +1163,19 @@ low_memory.title=Low memory
 main_frame.close.tips=Close
 main_frame.inline_info_close.tip=Close information panel
 
-main_frame.status.not_running=Not running
-main_frame.status.no_folders=No folders configured
-main_frame.status.never_synced=Folders never in sync
-main_frame.status.synchronizing.0=Sync in progress.
-main_frame.status.synchronizing.1=Sync in progress..
-main_frame.status.synchronizing.2=Sync in progress...
-main_frame.status.in_sync=All folders are in sync
+main_frame.not_running=Not running
+main_frame.no_folders=No folders configured
+main_frame.never_synced=Folders never in sync
+main_frame.synchronizing.0=Sync in progress.
+main_frame.synchronizing.1=Sync in progress..
+main_frame.synchronizing.2=Sync in progress...
+main_frame.in_sync=All folders are in sync
 
 main_frame.uncompact.tips=Switch to uncompact mode
+
+main_frame.sync_unknown=Estimated sync: Unknown
+main_frame.sync_eta=Estimated sync: {0}
+main_frame.last_synced=Last sync {0}
 
 main_tabbed_pane.computers.description=Details about other computers
 main_tabbed_pane.computers.key=C
