--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -211,6 +211,10 @@ action_open_files_information.description=Open file information for this folder
 action_open_files_information.key=F
 action_open_files_information.name=Browse files
 
+action_open_folders_base.description=Open PowerFolder base directory
+action_open_folders_base.key=F
+action_open_folders_base.name=Folders
+
 action_open_members_information.description=Open information on members for this folder
 action_open_members_information.key=M
 action_open_members_information.name=Members
