Fixes and optimizations

--- a/src/test-resources/ControllerBart.config
+++ b/src/test-resources/ControllerBart.config
@@ -20,3 +20,4 @@ mydyndns=localhost
 auto.connect=false
 uploads.auto.cleanup.frequency=4
 downloads.auto.cleanup.frequency=4
+transfer.limit.autodetect=false
