--- a/src/test-resources/ControllerLisa.config
+++ b/src/test-resources/ControllerLisa.config
@@ -19,3 +19,4 @@ networkingmode=LANONLYMODE
 auto.connect=false
 uploads.auto.cleanup.frequency=4
 downloads.auto.cleanup.frequency=4
+transfer.limit.autodetect=false
