--- a/src/test-resources/ControllerHomer.config
+++ b/src/test-resources/ControllerHomer.config
@@ -19,3 +19,4 @@ mydyndns=localhost
 auto.connect=false
 uploads.auto.cleanup.frequency=4
 downloads.auto.cleanup.frequency=4
+transfer.limit.autodetect=false
