Standard notice handling of oomes, refs #2571

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1260,6 +1260,9 @@ online_storage_component.online_storage_unjoined_text=Cloud space: 0% (start now
 online_storage_component.online_storage_unjoined_tip=Backup this folder to cloud
 online_storage_component.online_storage_warning=cloud space quota exceeded
 
+out_of_memory_notice.title=Out Of Memory
+out_of_memory_notice.summary={APPNAME} is out of memory
+
 permissions.folder.no_access=No access
 permissions.folder.read_write=Read/Write
 permissions.folder.read=Read
