refs #2549 new look

--- a/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
@@ -166,7 +166,7 @@ sync10.icon=de/dal33t/powerfolder/skin/lightsky/icons/Sync10.png
 sync11.icon=de/dal33t/powerfolder/skin/lightsky/icons/Sync11.png
 sync_complete.icon=de/dal33t/powerfolder/skin/lightsky/icons/SyncComplete.png
 system_monitor.icon=de/dal33t/powerfolder/skin/lightsky/icons/SystemMonitor.png
-systray_default.icon=de/dal33t/powerfolder/skin/lightsky/icons/Icon32x32.png
+systray_all_ok.icon=de/dal33t/powerfolder/skin/lightsky/icons/SyncOK.png
 uncompact.icon=de/dal33t/powerfolder/skin/lightsky/icons/Uncompact.png
 unknown.icon=de/dal33t/powerfolder/skin/lightsky/icons/Unknown.png
 upload.icon=de/dal33t/powerfolder/skin/lightsky/icons/Upload.png
