--- a/src/skins/de/dal33t/powerfolder/skin/blueglobe/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/blueglobe/icons.properties
@@ -162,7 +162,7 @@ sync10.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Sync10.png
 sync11.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Sync11.png
 sync_complete.icon=de/dal33t/powerfolder/skin/blueglobe/icons/SyncComplete.png
 system_monitor.icon=de/dal33t/powerfolder/skin/blueglobe/icons/SystemMonitor.png
-systray_default.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Icon32x32.png
+systray_all_ok.icon=de/dal33t/powerfolder/skin/blueglobe/icons/SyncOK.png
 uncompact.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Uncompact.png
 unknown.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Unknown.png
 upload.icon=de/dal33t/powerfolder/skin/blueglobe/icons/Upload.png
