--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -303,13 +303,13 @@ action_restore_archive.description=Restore archived file version
 action_restore_archive.key=R
 action_restore_archive.name=Restore
 
-action_restore_file.description=Undelete file
-action_restore_file.key=R
-action_restore_file.name=Restore
-
 action_resume_sync.description=Enable folder change scanning
 action_resume_sync.key=R
 action_resume_sync.name=Resume
+
+action_file_archive.description=Restore files from archive
+action_file_archive.key=F
+action_file_archive.name=File Archive
 
 action_search_computer.description=Search for a computer
 action_search_computer.key=S
@@ -1756,7 +1756,7 @@ wizard.login_online_storage.logging_in.text=Please wait while logging in.
 
 wizard.load_candidate.select_file=Configure folder candidate
 
-wizard.multi_file_restore_panel.title=File restore
+wizard.multi_file_restore_panel.title=Restore files from archive
 wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
 wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 wizard.multi_file_restore_panel.retrieving_success=File version information has been retrieved.
