Aut accept is now a preference, refs #2610

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -984,8 +984,6 @@ friend_search.node_table.on_local_network=LAN
 friendship.notification.message=You have received a connection request.
 friendship.notification.title=Connection request received
 
-folders_tab.auto_accept.text=Auto setup
-folders_tab.auto_accept.tip=Automatically setup new folders on this computer.
 folders_tab.connecting=Connecting...
 folders_tab.not_logged_in=Not logged in
 folders_tab.login=(Login)
@@ -1275,6 +1273,7 @@ plugin_settings.name=Configure
 plugin_settings.key=C
 plugin_settings.description=Configure this plugin now
 
+preferences.dialog.auto_setup_folders=Automatically setup folders
 preferences.dialog.advPort.tooltip=Enter a comma-separated list of ports {APPNAME} should listen for connections on
 preferences.dialog.advPort=Port
 preferences.dialog.advanced.title=Advanced
